[NNO-9869] validate for 'invoke' action was added. attr 'object-id' is required